# ChangeLog for app-shells/bash
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-shells/bash/ChangeLog,v 1.213 2009/03/14 18:12:58 vapier Exp $

*bash-4.0_p10-r1 (14 Mar 2009)

  14 Mar 2009; Mike Frysinger <vapier@gentoo.org>
  +files/bash-4.0-amp-case-segv.patch, +files/bash-4.0-bar-and-piping.patch,
  +bash-4.0_p10-r1.ebuild:
  Add some more patches from upstream bash.

  10 Mar 2009; Doug Goldstein <cardoe@gentoo.org> bash-4.0_p10.ebuild:
  fix licensing issue. bug #262015

*bash-4.0_p10 (10 Mar 2009)

  10 Mar 2009; Mike Frysinger <vapier@gentoo.org> +bash-4.0_p10.ebuild:
  Move to official bash patches and into ~arch #261905 by Lars
  (Polynomial-C).

  03 Mar 2009; Mike Frysinger <vapier@gentoo.org>
  +files/bash-4.0-comsub-comments.patch, bash-4.0.ebuild:
  Add fix from upstream for comments in subshelled case statements.

  03 Mar 2009; Mike Frysinger <vapier@gentoo.org>
  +files/bash-4.0-read-timeout-reset.patch, bash-4.0.ebuild:
  Add fix from upstream for read timeouts.

  27 Feb 2009; Mike Frysinger <vapier@gentoo.org>
  +files/bash-4.0-comsub-herestring.patch, bash-4.0.ebuild:
  Fix from upstream for regression with subshells/herestrings found via
  revdep-rebuild script.

  26 Feb 2009; Mike Frysinger <vapier@gentoo.org>
  +files/bash-4.0-associative-array-subscripts.patch, bash-4.0.ebuild:
  Add upstream patch for associative array issues.

  26 Feb 2009; Mike Frysinger <vapier@gentoo.org>
  files/bash-4.0-declare-identifier.patch:
  Newer patch from upstream.

  25 Feb 2009; Mike Frysinger <vapier@gentoo.org>
  +files/bash-4.0-pipeline-reserved-word.patch, bash-4.0.ebuild:
  Fix from upstream for new |& construct.

  25 Feb 2009; Mike Frysinger <vapier@gentoo.org>
  +files/bash-4.0-reset-parser-current-token.patch, bash-4.0.ebuild:
  Add a fix for quotes from upstream.

  25 Feb 2009; Mike Frysinger <vapier@gentoo.org> bash-3.2_p39.ebuild,